# argilla-haystack

./: LICENSE  Makefile  README.md  environment_dev.yml  nb-test.ipynb  pyproject.toml  requirements.txt  test.md
.github/: test.yml
.github/workflows/: test.yml
docs/: use_argilla_callback_in_haystack-v1.ipynb  use_argilla_callback_in_haystack.ipynb
haystack_argilla/: base.py
src/argilla_haystack/: __init__.py  base.py  helpers.py
tests/: test_base.py  test_helpers.py
